<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.averma1212.popular_movies_2.childActivity">

    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/child_title"
                android:textSize="42sp"
                android:textStyle="italic"
                android:gravity="center"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/child_img"
                android:layout_marginTop="20dp"
                android:layout_below="@id/child_title"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/child_title"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/child_img"
                android:id="@+id/relativeLayout">

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:id="@+id/tableLayout">
                    <TableRow android:layout_marginBottom="10dp">
                        <TextView
                            android:text="@string/child_votes"
                            android:padding="3dip"
                            android:textStyle="bold"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/child_votes"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            tools:text="hindi"
                            android:textSize="16sp"/>
                    </TableRow>

                    <TableRow android:layout_marginBottom="10dp">
                        <TextView
                            android:text="@string/child_lang"
                            android:padding="3dip"
                            android:textStyle="bold"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/child_lang"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            tools:text="hindi"
                            android:textSize="16sp"/>
                    </TableRow>

                    <TableRow android:layout_marginBottom="10dp">
                        <TextView
                            android:text="@string/child_date"
                            android:padding="3dip"
                            android:textStyle="bold"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/child_date"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            tools:text="hindi"
                            android:textSize="16sp"/>
                    </TableRow>
                </TableLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_desc"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textStyle="bold|italic"
                android:layout_below="@id/child_img"/>



            <TextView
                android:id="@+id/child_desc"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/desc_title"/>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trailers_recyclerView"
                android:layout_below="@id/child_desc"
                >
            <TextView
                android:id="@+id/trailer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_trailer"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textStyle="bold|italic"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_below="@id/trailer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

                <ProgressBar
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_centerInParent="true"
                    android:visibility="invisible"
                    android:layout_below="@id/trailer_title"
                    android:id="@+id/trailer_loading_indicator"/>

            <TextView
                android:id="@+id/noTrailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailer_title"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/no_trailer"
                android:visibility="invisible"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/review_RecyclerReview"
                android:layout_below="@id/trailers_recyclerView">

                <TextView
                    android:id="@+id/review_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/child_review"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:textStyle="bold|italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_below="@id/review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

                <ProgressBar
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_centerInParent="true"
                    android:visibility="invisible"
                    android:layout_below="@id/review_title"
                    android:id="@+id/review_loading_indicator"/>

                <TextView
                    android:id="@+id/noReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/review_title"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/no_review"
                    android:visibility="invisible"/>

        </RelativeLayout>

            <ImageButton
                android:id="@+id/favButton"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                app:srcCompat="@drawable/star_off"
                android:layout_below="@+id/relativeLayout"
                android:layout_toEndOf="@+id/child_img" />


        </RelativeLayout>
    </ScrollView>

</FrameLayout>
